--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tibebwa",
+  "name": "earthart-africa",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,8 +16,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@rainbow-me/rainbowkit": "^2.2.4",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query": "^5.74.11",
     "@types/node": "^20",
@@ -25,7 +23,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "lucide-react": "^0.503.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "viem": "^2.28.1",
